2013-06-11  Basic  <simsong@Mucha.local>

	* doc/tcpflow.1.in (std): removed explaination of filtering expressions

2013-05-26  Basic  <simsong@Mucha.local>

	* src/tcpip.cpp (tcpip::print_packet): implemented hex dump

	* src/scan_netviz.cpp (scan_netviz): disabled by default for now.

	* src/tcpip.cpp (tcpip::print_packet): now prints 'filename' with console output (wasn't working due to bug).

2013-04-17  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/iptree.h (template): changed inc() to add()
2013-04-16  Simson Garfinkel  <simsong@Mucha.local>

	* src/iptree.h: changed 'trim' to 'prune' for correct terminology.

2013-03-30  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_tcpdemux.cpp (scan_tcpdemux): added -S tcp_timeout 

2013-03-03  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_netviz.cpp (scan_netviz): scan_netviz enabled by default

2013-02-27  Simson Garfinkel  <simsong@Mucha.local>

	* configure.ac: added /usr/boost/include to search path

2013-01-27  Simson Garfinkel  <simsong@FC17>

	* src/tcpdemux.cpp (close_all_fd): now calls close_file(false), to preven openflows from being modified while it is being iterated.

	* src/tcpflow.h: removed SET_BIT as it wasn't being used

	* configure.ac: removed bcopy & bzero

2013-01-26  Simson Garfinkel  <simsong@npsair.local>

2013-01-08  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/scan_netviz.cpp (th_shutdown): th_one_page is now lazily created and destroyed at end

2013-01-03  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpflow.cpp (main): opt_gzip_decompress renamed to gzip_decompress and implemented.

	* src/flow.cpp (flow::new_filename): now automatically makes subdirectories if necessary

2013-01-02  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/scan_http.cpp: zero-length attachments are no longer created on disk.

	* src/tcpip.cpp (tcpip::store_packet): zero-length flows are no longer created on disk.

2012-12-27  Simson Garfinkel  <simsong@Mucha.local>
